syntax = "proto3";

package services.user;

option go_package = "github.com/somatech1/mikros/protobuf-examples/gen/go/services/user;user";

import "services/user/user.proto";

service UserService {
  rpc GetUserByID(GetUserByIDRequest) returns (GetUserByIDResponse);
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message GetUserByIDRequest {
  string user_id = 1;
}

message GetUserByIDResponse {
  UserWire user = 1;
}

message GetUsersRequest {
  // You can add filtering options here if needed
}

message GetUsersResponse {
  repeated UserWire users = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  int32 age = 3;
}

message CreateUserResponse {
  UserWire user = 1;
}

message UpdateUserRequest {
  string user_id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
}

message UpdateUserResponse {
  UserWire user = 1;
}

message DeleteUserRequest {
  string user_id = 1;
}

message DeleteUserResponse {
  UserWire user = 1;
}